gateway/src/main/fabric8/gateway-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=gateway&var-version=1.0.0-SNAPSHOT
  labels:
    provider: fabric8
    project: gateway
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: gateway
spec:
  replicas: 1
  selector:
    project: gateway
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.example
  template:
    metadata:
      annotations:
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=gateway&var-version=1.0.0-SNAPSHOT
      labels:
        provider: fabric8
        project: gateway
        version: 1.0.0-SNAPSHOT
        group: com.example
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: DEPLOY_DIR
          value: /deployments
        - name: FREELANCERSERVICE_URL
          valueFrom:
            configMapKeyRef:
              name: gateway-config
              key: FREELANCERSERVICE_URL
        image: gateway:latest
        imagePullPolicy: IfNotPresent
        name: webapp
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - webapp
      from:
        kind: ImageStreamTag
        name: gateway:latest
    type: ImageChange
