gateway/src/main/fabric8/gateway-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: "true"
    provider: fabric8
    project: gateway
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: gateway
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    project: gateway
    provider: fabric8
    group: com.example
