gateway/src/main/fabric8/gateway-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    provider: fabric8
    project: gateway
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: gateway
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: gateway
